--- a/src/PagesCss/textModule.css
+++ b/src/PagesCss/textModule.css
@@ -24,3 +24,30 @@
   font-size: 12px;
   color: rgba(0, 0, 0, 0.6);
 }
+.Section-Styled-hr {
+  border: rgba(0, 0, 0, 0.3) 0.01px solid;
+  width: 100%;
+  margin-top: 5px;
+}
+/* Add this to your CSS file */
+.loader-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 30vh; /* Full height of the viewport */
+}
+
+.spinner {
+  border: 4px solid rgba(0, 0, 0, 0.1);
+  border-left-color: #ec2121; /* Color of the spinner */
+  border-radius: 50%;
+  width: 40px;
+  height: 40px;
+  animation: spin 1s linear infinite;
+}
+
+@keyframes spin {
+  to {
+    transform: rotate(360deg);
+  }
+}
