--- a/src/Components/HomPageComp/Css Files/CoverStory.css
+++ b/src/Components/HomPageComp/Css Files/CoverStory.css
@@ -5,7 +5,7 @@
 .Cover-Story-Heading {
   padding-left: 17%;
   padding-right: 17%;
-  margin-top: 10px;
+  margin-top: 2%;
 }
 
 .Styled-hr-coverstory {
