--- a/src/Components/HomPageComp/Css Files/EditorialUrban.css
+++ b/src/Components/HomPageComp/Css Files/EditorialUrban.css
@@ -7,7 +7,7 @@
 .Editorial-Heading {
   padding-left: 17%;
   padding-right: 16%;
-  margin-top: 10px;
+  margin-top: 2%;
 }
 
 .Editorial-Container {
