--- a/src/Components/HomPageComp/Css Files/Oneonone.css
+++ b/src/Components/HomPageComp/Css Files/Oneonone.css
@@ -6,7 +6,7 @@
 .OneonOne-Heading {
   padding-left: 17%;
   padding-right: 16%;
-  margin-top: 10px;
+  margin-top: 2%;
   display: -webkit-box;
   -webkit-line-clamp: 2;
   -webkit-box-orient: vertical;
