--- a/src/Components/HomPageComp/Css Files/Velocity.css
+++ b/src/Components/HomPageComp/Css Files/Velocity.css
@@ -5,7 +5,7 @@
 .Velocity-Heading {
   padding-left: 17%;
   padding-right: 16%;
-  margin-top: 10px;
+  margin-top: 2%;
 }
 
 .Velocity-Container {
