--- a/src/Components/siteheader.css
+++ b/src/Components/siteheader.css
@@ -235,6 +235,67 @@
 .mobile-nav .nav-link:hover {
   color: #ec2121;
 }
+/* Search Button */
+.search-button {
+  background: none;
+  border: none;
+  cursor: pointer;
+  font-size: 20px;
+  color: #333;
+  transition: transform 0.3s ease-in-out;
+}
+
+.search-button:hover {
+  transform: scale(1.1);
+}
+
+/* Search Bar */
+.search-bar {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: absolute;
+  top: 60px; /* Adjust to align properly under the header */
+  right: 0;
+  width: 100%;
+  max-width: 500px;
+  background-color: white;
+  padding: 10px 20px;
+  border-radius: 30px;
+  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
+  z-index: 1000;
+}
+
+/* Search Input */
+.search-input {
+  width: 80%;
+  padding: 8px 15px;
+  border: 1px solid #ccc;
+  border-radius: 30px;
+  font-size: 16px;
+  transition: border 0.3s ease;
+}
+
+.search-input:focus {
+  border-color: #ec2121;
+  outline: none;
+}
+
+/* Submit Button */
+.search-submit-button {
+  padding: 8px 15px;
+  background-color: #ec2121;
+  color: white;
+  border: none;
+  border-radius: 20px;
+  margin-left: 10px;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+}
+
+.search-submit-button:hover {
+  background-color: #0056b3;
+}
 
 /* Media Queries */
 @media (max-width: 768px) {
