--- a/src/PagesCss/hompage.css
+++ b/src/PagesCss/hompage.css
@@ -8,7 +8,9 @@
   padding-right: 22%;
   align-items: center;
 }
-
+.slider {
+  height: 50%;
+}
 .slide-container {
   position: relative;
   height: 100%;
@@ -18,7 +20,7 @@
 
 .slider-card-image {
   width: 100%;
-  height: 100%;
+  height: 500px;
   object-fit: cover;
   transition: transform 0.3s ease;
   border-radius: 15px; /* Round the image corners to match container */
