--- a/src/Components/MagazineComp/Css Files/UUMagazine.css
+++ b/src/Components/MagazineComp/Css Files/UUMagazine.css
@@ -118,6 +118,11 @@
   color: #666;
   margin-top: 5px;
   text-align: center; /* Center the description */
+  display: -webkit-box;
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 
 /* No Magazines Message */
