--- a/src/Components/EventPageComp/Css/eventHeader.css
+++ b/src/Components/EventPageComp/Css/eventHeader.css
@@ -10,6 +10,16 @@
   border-radius: 10px; /* Rounded corners for the header */
   box-shadow: 0 4px 15px rgba(0, 0, 0, 0.1); /* Subtle shadow effect */
 }
+.maintenance-banner {
+  background-color: #ffcc00;
+  color: #000;
+  text-align: center;
+  padding: 10px;
+  font-weight: bold;
+  font-size: 16px;
+  width: 100%;
+}
+
 
 #Event-Title {
   font-size: 40px;
